--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^4.2.0",
-    "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "nuxt": "^3.12.3"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0"
