--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "firebase": "^12.5.0",
     "nuxt": "^3.12.3"
   },
   "devDependencies": {
